Disable top resize border if the window is tiled

Do this in order to avoid interfering with the Fitts' law.

BUG: 467388